* Added a new petting scene by QB/LD to Terry. Touch fluffy tail!
* Added new patreon sponsored content:
 - Naga loss scene for cocked players by LonelyRonin.
* Made some tweaks to the code that should allow the game to run on offline Internet Explorer. Save/Load isn't possible, except by text.
* Implemented an EXTREMELY barebones pregnancy system.
 - Save/load works

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3o
------------
* Various bugfixes in new content.
* A fuckton of typo fixes, courtesy to Johnathan_Roberts.
* Another fuckton of typo fixes, courtesy to Spiegelmeister.
* Rosalin TFs:
 - Moth TF.
* Foxberries can now be picked in the forest, making it possible to craft the Vulpinix potion.
* Terry horsecock worship scene (Huuuuge), written by LukaDoc and QuietBrowser.
* Added the first of hopefully many scenes from Patreon sponsored writer LonelyRonin:
 - Naga encounter
 - Naga loss (requires pussy)
* Added a bunch of more random encounters to Rigard, written by Del and sponsored by Patreon.
* Added the first of hopefully many scenes from Patreon sponsored writer Jo Rhade:
 - Equines win, fuck mare (requires real cock)
* Fixed a bug in Terry when you attempt the horsecock TF scene as a pure female player.
* Fixed a bug in Kiai's toy scenes. The text should be more readable now when it talks about the various toys.
* Included an experimental hunting system (in debug). It allows you to search for specific enemies and events. Will most likely be gated behind some mechanic later so as to not be abused.

Version 0.3n
------------
* The usual typos and bugfixes.
* Lei can now give you some advice on how to handle Krawitz.
* Fixed a bug with lactation.
* Added scenes for bunnies (includes some Terry scenes by LD):
 - Win: Get fucked by males.
 - Win: Fuck males (dominant).